Fix media screen alignment

--- a/styles/Header.module.css
+++ b/styles/Header.module.css
@@ -63,7 +63,7 @@
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
   .header {
     position: relative;
   }
