--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,6 +7,10 @@
   padding: 50px;
 }
 
+.home {
+  text-align: center;
+}
+
 .footer {
   width: 100%;
   height: 100px;
@@ -38,9 +42,13 @@
 }
 
 .title {
-  margin: 0;
   line-height: 1.15;
   font-size: 4rem;
+}
+
+.subtitle {
+  font-size: 2rem;
+  line-height: 1;
 }
 
 .title,
